--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Question.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Question.orm.yml
@@ -1,6 +1,11 @@
 AndyFranklin\FaqBundle\Entity\Question:
   type: entity
   table: question
+  gedmo:
+    soft_deleteable:
+      field_name: deletedAt
+      time_aware: false
+      hard_delete: true
   id:
     id:
       id: true
@@ -10,12 +15,16 @@ AndyFranklin\FaqBundle\Entity\Question:
   fields:
     title:
       type: string
-    body:
-      type: string
     createdAt:
       type: datetime
+      gedmo:
+        timestampable:
+          on: create
     updatedAt:
       type: datetime
+      gedmo:
+        timestampable:
+          on: update
     ranking:
       type: integer
     rating:
@@ -24,3 +33,12 @@ AndyFranklin\FaqBundle\Entity\Question:
       type: boolean
     slug:
       type: string
+      gedmo:
+        slug:
+          separator: _
+          style: camel
+          fields:
+            - title
+    deletedAt:
+      tpye: date
+      nullable: true
