--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Answer.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Answer.orm.yml
@@ -1,6 +1,11 @@
 AndyFranklin\FaqBundle\Entity\Answer:
   type: entity
   table: answer
+  gedmo:
+    soft_deleteable:
+      field_name: deletedAt
+      time_aware: false
+      hard_delete: true
   id:
     id:
       id: true
@@ -12,9 +17,18 @@ AndyFranklin\FaqBundle\Entity\Answer:
       type: string
     createdAt:
       type: datetime
+      gedmo:
+        timestampable:
+          on: create
     updatedAt:
       type: datetime
+      gedmo:
+        timestampable:
+          on: update
     rating:
       type: integer
     published:
       type: boolean
+    deletedAt:
+      tpye: date
+      nullable: true
