--- a/src/AndyFranklin/FaqBundle/Resources/config/routing.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 andy_franklin_faq_homepage:
     path:     /
-    defaults: { _controller: AndyFranklinFaqBundle:Default:index }
+    defaults: { _controller: AndyFranklinFaqBundle:Question:index }
