--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,3 +76,7 @@ stof_doctrine_extensions:
         default:
             timestampable: true
             sluggable: true
+fos_rest:
+    format_listener:
+        rules:
+            - { path: ^/, prefer_extension: true, fallback_format: json, priorities: [ json ] }
