--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Search.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Search.orm.yml
@@ -30,5 +30,5 @@ AndyFranklin\FaqBundle\Entity\Search:
     published:
       type: boolean
     deletedAt:
-      tpye: date
+      type: datetime
       nullable: true
