--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Answer.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Answer.orm.yml
@@ -30,5 +30,9 @@ AndyFranklin\FaqBundle\Entity\Answer:
     published:
       type: boolean
     deletedAt:
-      tpye: date
+      type: datetime
       nullable: true
+  manyToOne:
+    question:
+      targetEntity: AndyFranklin\FaqBundle\Entity\Question
+      inversedBy: answers
