Question Controller + Answer controller basics

--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Category.orm.yml
@@ -32,7 +32,7 @@ AndyFranklin\FaqBundle\Entity\Category:
       gedmo:
         slug:
           separator: _
-          style: camel
+          style: lower
           fields:
             - title
     deletedAt:
