--- a/src/AndyFranklin/FaqBundle/Resources/config/validation.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/validation.yml
@@ -1,2 +1,4 @@
 imports:
     - { resource: 'validation/question.yml' }
+    - { resource: 'validation/answer.yml' }
+    - { resource: 'validation/category.yml' }
