Autowiring bundle services, improvements to questionController

--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Category.orm.yml
@@ -38,7 +38,7 @@ AndyFranklin\FaqBundle\Entity\Category:
     deletedAt:
       type: datetime
       nullable: true
-  manyToOne:
-    question:
+  manyToMany:
+    questions:
       targetEntity: AndyFranklin\FaqBundle\Entity\Question
-      inversedBy: categories
+      mappedBy: categories
