Rating questions+answers up and down, adding category to question

--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Answer.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Answer.orm.yml
@@ -1,4 +1,5 @@
 AndyFranklin\FaqBundle\Entity\Answer:
+  repositoryClass: AndyFranklin\FaqBundle\Repository\AnswerRepository
   type: entity
   table: answer
   gedmo:
