--- a/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/AndyFranklin/FaqBundle/Resources/config/doctrine/Category.orm.yml
@@ -1,4 +1,5 @@
 AndyFranklin\FaqBundle\Entity\Category:
+  repositoryClass: AndyFranklin\FaqBundle\Repository\CategoryRepository
   type: entity
   table: category
   gedmo:
